compiled/artifactory/artifactory/templates/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: artifactory
    chart: artifactory-11.7.6
    component: nginx
    heritage: Tiller
    release: artifactory
  name: artifactory-artifactory-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
      component: nginx
      release: artifactory
  template:
    metadata:
      annotations:
        checksum/nginx-artifactory-conf: a68df595112f8195872657616c5474077783d2fd8121d729aef7c7a2b54ab3db
        checksum/nginx-conf: 9a43269824f35c12a82c167b0ec22e1cc0f6f30283c12ffc6848edf6a659d872
      labels:
        app: artifactory
        chart: artifactory-11.7.6
        component: nginx
        heritage: Tiller
        release: artifactory
    spec:
      containers:
        - command:
            - nginx
            - -g
            - daemon off;
          image: docker.bintray.io/jfrog/nginx-artifactory-pro:7.12.6
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /router/api/v1/system/health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: nginx
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /router/api/v1/system/health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 250Mi
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-conf
              subPath: nginx.conf
            - mountPath: /var/opt/jfrog/nginx/conf.d/
              name: nginx-artifactory-conf
            - mountPath: /var/opt/jfrog/nginx
              name: nginx-volume
            - mountPath: /var/opt/jfrog/nginx/ssl
              name: ssl-certificates
      securityContext:
        fsGroup: 107
        runAsUser: 104
      serviceAccountName: artifactory-artifactory
      volumes:
        - configMap:
            name: artifactory-artifactory-nginx-conf
          name: nginx-conf
        - configMap:
            name: artifactory-artifactory-nginx-artifactory-conf
          name: nginx-artifactory-conf
        - emptyDir: {}
          name: nginx-volume
        - name: ssl-certificates
          secret:
            secretName: artifactory-artifactory-nginx-certificate
