compiled/artifactory/artifactory/templates/artifactory-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: artifactory
    chart: artifactory-11.7.6
    component: artifactory
    heritage: Tiller
    release: null
  name: -artifactory
spec:
  ports:
    - name: http-router
      port: 8082
      protocol: TCP
      targetPort: 8082
    - name: http-artifactory
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: artifactory
    component: artifactory
    release: null
  type: ClusterIP
