compiled/artifactory/artifactory/templates/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: artifactory
    chart: artifactory-11.7.6
    component: nginx
    heritage: Tiller
    release: artifactory
  name: artifactory-artifactory-nginx
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: artifactory
    component: nginx
    release: artifactory
  type: LoadBalancer
